--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
         run: mkdir -vp build
 
       - name: Build
-        uses: cheeplusplus/simplestaticsitegen@0.0.9-gha 
+        uses: cheeplusplus/simplestaticsitegen@gh-actions
         with:
           source: src
           target: build
